--- a/src/main/resources/templates/fragments/fragment-entete.html
+++ b/src/main/resources/templates/fragments/fragment-entete.html
@@ -1,5 +1,10 @@
 <header xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-entete">
-	<div class="banner-background">
+	<div class="banner-container">
+		<div class="banner-image-container">
+			<img src="/images/1.jpg" alt="Banner background" class="banner-image">
+			<div class="banner-overlay"></div>
+		</div>
+
 		<nav>
 			<div>
 				<a href="/">ENI Enchères</a>
