--- a/src/main/resources/templates/updateArticle.html
+++ b/src/main/resources/templates/updateArticle.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 <header xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-entete">
-  <nav>
+  <div class="banner-image-container" >
+    <img src="/images/1.jpg" alt="Banner background" class="banner-image">
+    <div class="banner-overlay"></div>
+  </div>
+  <nav style="padding: 15px">
     <div>
       <a href="/">ENI Enchères</a>
     </div>
@@ -27,7 +31,7 @@
   </nav>
 </header>
 
-<main class="center-main">
+<main class="center-main" style="padding-top: 15px">
   <form th:action="@{/sales/edit/{id}(id=*{soldArticles.idArticle})}" method="post" th:object="${soldArticleViewModel}" enctype="multipart/form-data">
     <h3>Modifier l'article</h3>
     <div class="form-container">
